typo norme di progetto

--- a/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
+++ b/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
@@ -67,9 +67,9 @@ Ogni documento sarà così strutturato:
     \item Una o più pagine di contenuto
 \end{enumerate}
 
-Le varie sezioni saranno così definite:
+Le varie sezioni saranno così definite: \\
 
-\textbf{Pagina di Intestazione} \\
+\textbf{Pagina di Intestazione} 
 \begin{itemize}
     \item Logo e nome del gruppo
     \item Nome del progetto e azienda cliente
@@ -95,8 +95,8 @@ L'elenco delle versioni è una tabella così definita:
     \item Revisore
     \item Descrizione
 \end{itemize}
-Le righe della tabella sono organizzate in ordine cronologico inverso.
-
+Le righe della tabella sono organizzate in ordine cronologico inverso. 
+\newline \newline
 \textbf{Indice} \\
 L'indice è stato creato utilizzando il comando \textit{\textbackslash tableofcontents}
 
