--- a/docs/interni/verbali/2023_04_17_I/2023_04_17_I.tex
+++ b/docs/interni/verbali/2023_04_17_I/2023_04_17_I.tex
@@ -36,18 +36,22 @@
 \section*{O.D.G}
 \begin{itemize}
     \item Conclusione Norme di progetto
-    \item Inizio stesura Piano di Progetto e Piano di Qualifica
-    \item Suddivisione delle attività riguardanti la conclusione dei documenti
+    \item Inizio Stesura Piano di Progetto e Piano di Qualifica
+    \item Suddivisione delle Attività Riguardanti la Conclusione dei Documenti
     \item Varie ed Eventuali
 \end{itemize}
 
 \section*{Conclusioni}
 Il gruppo ha discusso delle Norme di Progetto da ultimare e condiviso le proposte sotto descritte:
-\item inizio della stesura di Piano di Progetto e Piano di Qualifica
-\item suddivisione dei compiti
-\item data di revisione degli impegni assunti in data odierna, fissata per il giorno Lunedì 24 Aprile alle ore 16
+\begin{itemize}
+    \item inizio della stesura di Piano di Progetto e Piano di Qualifica;
+    \item suddivisione dei compiti;
+    \item data di revisione degli impegni assunti in data odierna fissata per il giorno Lunedì 24 Aprile alle ore 16.
+\end{itemize}
 \section*{Impegni Assunti}
-\item Le Norme di Progetto saranno ultimate da Alberti Nicolas, Brotto Romina, Ceccato Francesco e Soldà Matteo, a seguito della discussione avvenuta sul contenuto.
-\item Cavaliere Erica si occuperà di iniziare la stesura del Piano di Progetto, mentre Salami Lorenzo si occuperà di iniziare la stesura del Piano di Qualifica.
-\item Il gruppo è d'accordo sulla data proposta per revisionare gli impegni definiti in data odierna.
+\begin{itemize}
+    \item Le Norme di Progetto saranno ultimate da Alberti Nicolas, Brotto Romina, Ceccato Francesco e Soldà Matteo, a seguito della discussione avvenuta sul contenuto;
+    \item Cavaliere Erica si occuperà di iniziare la stesura del Piano di Progetto, mentre Salami Lorenzo si occuperà di iniziare la stesura del Piano di Qualifica;
+    \item Il gruppo è d'accordo sulla data proposta per revisionare gli impegni definiti in data odierna.
+\end{itemize}
 \end{document}
