aggiunta e verificata sezione convenzioni di codifica

--- a/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
+++ b/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
@@ -16,6 +16,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 
 \addversione{0.0.0}{24/03/2023}{Soldà Matteo}{Brotto Romina}{Prima stesura.}
 \addversione{0.0.1}{19/04/2023}{Soldà Matteo}{}{Terminata Sezione Documentazione}
+\addversione{0.0.2}{20/04/2023}{Ceccato Francesco}{Soldà Matteo}{Terminata Sezione Convenzioni di Codifica}
 
 \begin{document}
 \makefrontpage \makeversioni
@@ -44,6 +45,73 @@ Tutta la documentazione sarà contenuta all'interno della cartella \textit{docs/
 I verbali interni saranno conservati nella sottocartella \textit{docs/interni/verbali} mentre quelli esterni saranno conservati in \textit{docs/esterni/verbali}.\\
 Per ogni documento esisterà una nuova sottocartella omonima.
 
+\subsubsection{Convezioni di Codifica}
+\textbf{Convenzioni Linguistiche} \newline
+\begin{itemize}
+    \item Ogni elemento del codice deve essere scritto in lingua inglese, ad eccezione dei commenti, che dovrebbero essere scritti in italiano per evitare incomprensioni.
+\end{itemize}
+\paragraph{}\\
+\textbf{Convenzioni di Nomenclatura File}
+\begin{itemize}
+    \item Un file che contiene l'interfaccia o l'implementazione di una sola ed esclusiva classe (ad eccezione di classi interne e sottoclassi) dovrebbe essere individuato nel seguento modo: \texttt{NomeClasse.estensione}.
+\end{itemize}
+\paragraph{} \\
+\textbf{Convenzioni Stilistiche} 
+\begin{table}[ht]
+\begin{tabular}{|| c || c | c | c | c |}
+    \hline
+        & Java & JavaScript & Python & TypeScript \\
+    \hline \hline
+    Funzioni e Metodi & camelCase() & camelCase() & snake\_case() & camelCase() \\
+    \hline
+    Classi & \multicolumn{4}{c|}{PascalCase} \\
+    \hline
+    Interfacce & PascalCase & PascalCase & NA & PascalCase \\
+    \hline
+    Namespace e Package & lowercase & NA & NA & camelCase \\
+    \hline
+    Costanti & \multicolumn{4}{c|}{SCREAMING\_SNAKE\_CASE} \\
+    \hline  
+    Variabili Locali e Attributi & camelCase & camelCase & snake\_case & snake\_case \\
+    \hline
+    Variabili Globali & NA & camelCase & snake\_case & snake\_case \\
+    \hline
+\end{tabular}
+\end{table}
+\vspace*{0.5cm} \newline
+A seguire, in JavaScript, le funzioni e i metodi privati anteporranno il simbolo di underscore prima del nome.\newline
+Per quanto riguarda invece i linguaggi di markup, i tag e gli attributi andranno scritti in lowercase se primitivi o in kebab-case se custom o complessi. \newline
+Inoltre:
+\begin{itemize}
+    \item I membri di una classe dovrebbero essere dichiarata e/o definiti nel seguente ordine:
+    \begin{itemize}
+        \item Variabili di classe (statiche)
+        \item Variabili di istanza (attributi) \\
+        Nel seguente ordine (ove possibile):
+        \begin{enumerate}
+            \item public
+            \item protected
+            \item private
+        \end{enumerate}
+        \item Costruttore
+        \item Distruttore (se richiesto)
+        \item Metodi
+    \end{itemize}
+    \item Un blocco di codice delimitato da parentesi graffe dovrebbe essere strutturato apponendo le parentesi graffe ognuna in una nuova riguarda;
+    \item Si predilige l'uso della tabulazione per indentare la porzione di codice inclusa in un blocco.
+\paragraph{}\\
+\end{itemize}
+\textbf{CSS}
+\begin{itemize}
+    \item Mantenere un file chiamato \texttt{nomepagina.css} per la versione desktop di ciascuna pagina;
+    \item Mantenere un file chiamato \texttt{global.css} per le regole che si applicano ad ogni aspetto del sito, in particolare ai moduli universali quali, a titolo esemplificativo e non esaustivo, header e footer;
+    \item Mantenere un file chiamato \texttt{mini.css} con accorgimenti per la versione mobile
+    \item Specificare le unità di misura in \textit{em}, \textit{rem}, \textit{\%}, \textit{vw}, \textit{vh} (unità relative), a parte per i valori delle seguenti proprietà, i quali possono essere espressi in \textit{px}:
+    \begin{itemize}
+        \item \textit{text-shadow}
+        \item \textit{box-shadow}
+    \end{itemize}
+\end{itemize}
 \section{Processi Secondari}
 \subsection{Documentazione}
 \subsubsection{Ciclo di Vita}
