--- a/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
+++ b/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
@@ -83,7 +83,7 @@ A seguire, in JavaScript, le funzioni e i metodi privati anteporranno il simbolo
 Per quanto riguarda invece i linguaggi di markup, i tag e gli attributi andranno scritti in lowercase se primitivi o in kebab-case se custom o complessi. \newline
 Inoltre:
 \begin{itemize}
-    \item I membri di una classe dovrebbero essere dichiarata e/o definiti nel seguente ordine:
+    \item I membri di una classe dovrebbero essere dichiarati e/o definiti nel seguente ordine:
     \begin{itemize}
         \item Variabili di classe (statiche)
         \item Variabili di istanza (attributi) \\
@@ -97,7 +97,7 @@ Inoltre:
         \item Distruttore (se richiesto)
         \item Metodi
     \end{itemize}
-    \item Un blocco di codice delimitato da parentesi graffe dovrebbe essere strutturato apponendo le parentesi graffe ognuna in una nuova riguarda;
+    \item Un blocco di codice delimitato da parentesi graffe dovrebbe essere strutturato apponendo le parentesi graffe ognuna in una nuova riga;
     \item Si predilige l'uso della tabulazione per indentare la porzione di codice inclusa in un blocco.
 \paragraph{}\\
 \end{itemize}
@@ -237,7 +237,7 @@ Questo tipo di versionamento si fonda sulle seguenti caratteristiche principali:
     \item La versione \textit{major zero} (es: $0.X.Y$) serve solo per lo sviluppo iniziale e indica una versione non stabile del prodotto;
     \item La versione \textit{patch Z} (es: $x.y.Z$) deve essere incrementata solo se sono state introdotte correzioni retrocompatibili del testo (modifica da parte del reddatore);
     \item La versione \textit{minor Y} (es: $x.Y.z$) deve essere incrementata se nella documentazione è stata introdotta una nuova modifica retrocompatibile (approvazione da parte del verificatore);
-    \item la versione \textit{major Z} (es: $X.y.z$) deve essere incrementata solo se nella documentazione è stata introdotta una modifica non retrocompatibile con le versioni precedenti (pubblicazione da parte del responsabile).
+    \item la versione \textit{major X} (es: $X.y.z$) deve essere incrementata solo se nella documentazione è stata introdotta una modifica non retrocompatibile con le versioni precedenti (pubblicazione da parte del responsabile).
 \end{enumerate}
 \subsubsection{Comandi Utili}
 \begin{itemize}
