aggiunto secondo reddatore

--- a/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
+++ b/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
@@ -8,7 +8,7 @@
 \settitolo{Norme di Progetto}
 \setprogetto{Lumos Minima}
 \setcommittenti{Imola Informatica}
-\setredattori{Soldà Matteo}
+\setredattori{Ceccato Francesco \\ Soldà Matteo}
 \setdestuso{interno}
 \setdescrizione{
 Questo documento contiene le procedure, gli strumenti e i criteri di qualità che verranno usati nel progetto.
