Aggiunta versione e descrizione norme di progetto

--- a/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
+++ b/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
@@ -17,6 +17,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{0.0.0}{24/03/2023}{Soldà Matteo}{Brotto Romina}{Prima stesura.}
 \addversione{0.0.1}{19/04/2023}{Soldà Matteo}{}{Terminata Sezione Documentazione}
 \addversione{0.0.2}{20/04/2023}{Ceccato Francesco}{Soldà Matteo}{Terminata Sezione Convenzioni di Codifica}
+\addversione{0.0.3}{22/04/2023}{Alberti Nicolas}{}{Stesura iniziale sezioni "1.1, 2.1, 2.2"}
 
 \begin{document}
 \makefrontpage \makeversioni
