Aggiunto template per intestazione e numerazione pagine + aggiunta intestazione e numerazione pagine norme di progetto + aggiunta reddatori norme di progetto

--- a/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
+++ b/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
@@ -8,7 +8,7 @@
 \settitolo{Norme di Progetto}
 \setprogetto{Lumos Minima}
 \setcommittenti{Imola Informatica}
-\setredattori{Ceccato Francesco \\ Soldà Matteo}
+\setredattori{Alberti Nicolas \\ Brotto Romina \\ Ceccato Francesco \\ Soldà Matteo}
 \setdestuso{interno}
 \setdescrizione{
 Questo documento contiene le procedure, gli strumenti e i criteri di qualità che verranno usati nel progetto.
@@ -21,9 +21,12 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{0.0.4}{22/04/2023}{Brotto Romina}{}{Stesura iniziale sezioni "3.3, 3.4, 4, 4.2"}
 
 \begin{document}
+\makeindexdetails
 \makefrontpage \makeversioni
 \tableofcontents
 \newpage
+\clearpage
+\makecontentsdetails{Norme di Progetto} 
 
 \section{Introduzione}
 \subsection{Scopo del Documento}
