--- a/docs/template/front_page.tex
+++ b/docs/template/front_page.tex
@@ -1,6 +1,7 @@
 \usepackage{graphicx}
 \usepackage{hyperref}
 \usepackage{makecell}
+\usepackage{fancyhdr}
 
 \newcommand{\settitolo}[1]{\newcommand{\titolo}{#1\\}}
 \newcommand{\setprogetto}[1]{\newcommand{\progetto}{#1\\}}
@@ -14,6 +15,19 @@
 }
 \newcommand{\setdestuso}[1]{\newcommand{\uso}{#1\\}}
 \newcommand{\setdescrizione}[1]{\newcommand{\descrizione}{#1\\}}
+
+\newcommand{\makeindexdetails}{
+	\pagestyle{fancy}
+	\lhead{4OURSQUARED} \rhead{Versione e Indice}
+	\pagenumbering{Roman}
+}
+
+\newcommand{\makecontentsdetails}[1]{
+	\clearpage
+	\pagestyle{fancy}
+	\lhead{4OURSQUARED} \rhead{#1}
+	\pagenumbering{arabic}
+	}
 
 \newcommand{\makefrontpage}{
 	\begin{titlepage}
